# ChangeLog for dev-perl/JavaScript-Packer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +JavaScript-Packer-0.02.ebuild, +metadata.xml:
  initial commit
