@@ -1,0 +1,16 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="2"
+MODULE_AUTHOR="NEVESENIN"
+inherit perl-module
+
+DESCRIPTION="Perl version of Dean Edwards' Packer.js"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND=""
+RDEPEND="${DEPEND}"
+SRC_TEST="do"
