@@ -1,4 +1,6 @@
 DIST JavaScript-Packer-0.02.tar.gz 8701 RMD160 cc25bf8903d809bb665cbb8d6b653a77700a4e42 SHA1 0afc381745e7158788afac4018531306e176b1e1 SHA256 a5b11a3ac653f37a329d289a1818ea89aca26ddc79bba14ad824772070d87d15
+DIST JavaScript-Packer-0.04.tar.gz 11369 RMD160 7287d36de4420fb72760b28d58e5824fe365ecab SHA1 597d7ed4c58c49f68ec940cc73d17f9e609778d5 SHA256 0f06a5fe69c5adb3830afcdfc6c73c503a1365540946a597b6997e652554167e
 EBUILD JavaScript-Packer-0.02.ebuild 316 RMD160 8ead12d4b926468f7b9617a60ff4f5c848673218 SHA1 c2c363b2c92efbe0e51743aae4d387b6ff1d0701 SHA256 7f8994523a33174a7d72d64a4b764aeeb923b2682d874b8cf7a2ea60bc140e0a
-MISC ChangeLog 247 RMD160 54cf21e343016d9a798dadab8f9db874fe68e4e8 SHA1 bd3fc0c4f26c27cfe7321e68687405617157edda SHA256 531f327c0a1882a21478796ad5415a9c3ba588f6c50c209854cd46f97c33f99a
+EBUILD JavaScript-Packer-0.04.ebuild 316 RMD160 8ead12d4b926468f7b9617a60ff4f5c848673218 SHA1 c2c363b2c92efbe0e51743aae4d387b6ff1d0701 SHA256 7f8994523a33174a7d72d64a4b764aeeb923b2682d874b8cf7a2ea60bc140e0a
+MISC ChangeLog 350 RMD160 f85f33c7a81812ce736c982ee0e83dcf45dd1a43 SHA1 56dd8c421d41c71ee18931863bf43c9b41237bb0 SHA256 ea229a39e490305d7bc2a83af0a810295b7f720e48b842fd3142b67e78cf243f
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
