@@ -1,11 +1,7 @@
 AUX postinstal-ru.txt 5 RMD160 79f099de2103f8a55f3cb1b35b95e368ace117d9 SHA1 4e1243bd22c66e76c2ba9eddc1f91394e57f9f83 SHA256 f2ca1bb6c7e907d06dafe4687e579fce76b37e4e93b7605022da52e6ccc26fd2
 AUX reconfig 0 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
 AUX spectre 597 RMD160 5cc12c360a87e4b2b3e8eae649464a073c12da89 SHA1 ec596705edcac97782b0107305dc73b5908a7a8d SHA256 1f8a7d7b1b2f399f6b9dc4ae843a4aecbcd2a5aa9ca5988242e7a3fc45834751
-DIST webgui-7.7.26-stable.tar.gz 17668406 RMD160 9e9a77117facd66b627423989397a194ee973880 SHA1 367a69746883971da7efc618671b2b87c86669cb SHA256 005d2e5de406a7d9328b760c860c0324e0d278d78f37f715c61c5e3199b556e8
-DIST webgui-7.7.33-stable.tar.gz 17793930 RMD160 92a3914b030f57f04ede68fe02a4a6367d5a6141 SHA1 b2ac11122d339d05209d95392758fc8c1a5719c2 SHA256 ccd66b9469bf4c054fb28388ce0ebf3df36bd4453665124565f15a6b422e2b73
 DIST webgui-7.9.0-beta.tar.gz 20262089 RMD160 5d2ec27503ebf80aab4c0b9df1dae4bcd9ba5a3f SHA1 2a82edf57289dc5b664e766cbdf3fff81d8bd032 SHA256 1f47c35c63dd63d9522aa848e1c588033b4271ba2664c092a3721fbea73caefd
-EBUILD webgui-7.7.26.ebuild 2826 RMD160 ab70d6a636b57b9d775f94f13f293a82f1fe6af4 SHA1 7be5c76bfe4351ccb3b6085ffaa80d1a4f56c186 SHA256 a22c0191ce9a5bc50a92cfe5eb53f0df003493f69f13c98c5446f3b8ac44007e
-EBUILD webgui-7.7.33.ebuild 2826 RMD160 ab70d6a636b57b9d775f94f13f293a82f1fe6af4 SHA1 7be5c76bfe4351ccb3b6085ffaa80d1a4f56c186 SHA256 a22c0191ce9a5bc50a92cfe5eb53f0df003493f69f13c98c5446f3b8ac44007e
-EBUILD webgui-7.9.0.ebuild 2824 RMD160 eecbf9aa59df5fb9d1adbc4851717b0365e8b7d4 SHA1 ac4b93f4b02340ab26f178fe0a24e850596c95d5 SHA256 ea6cb8e5af41f86f0c9f4122d465a1af7ed63eba6b8386cbe0a76fa5ae970b2b
+EBUILD webgui-7.9.0.ebuild 2609 RMD160 adcb330ffd20eb6d68d032d77255a5995c563ed3 SHA1 e3af68a1599401368e76ecdb6e60f785c9706263 SHA256 4f0e36a2d7869cf12d6f956f2158a45d53b16cdabd2a42fd856972ebff89d2e8
 MISC ChangeLog 435 RMD160 203631ed6139544548abf183f06937050fb20204 SHA1 7bd6d2c322cee07a166790e35b35d20e049ef647 SHA256 cc20554001781db5421dc6a482b29b895e9b246ca6eb70674144612f562ea0f8
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
