@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/JavaScript-Packer
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  23 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +JavaScript-Packer-0.04.ebuild:
+  version bump
 
   20 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +JavaScript-Packer-0.02.ebuild, +metadata.xml:
